@@ -1,3 +1,5 @@
+  * Minimised client configuration.
+
 boinc (6.13.12+dfsg-1) unstable; urgency=low
 
   * New upstream version.
